--- a/BecaDotNet.Infrastructure/BecaDotNet.Infrastructure.csproj
+++ b/BecaDotNet.Infrastructure/BecaDotNet.Infrastructure.csproj
@@ -44,5 +44,8 @@
     <Compile Include="ConnectionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LocalDb\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
