--- a/BecaDotNet.UI.WebForms/Web.config
+++ b/BecaDotNet.UI.WebForms/Web.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" />
+    <!--<add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" />-->
+    <add name="DefaultConnString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=beca_net_db;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.webServer>
     <handlers>
