--- a/BecaDotNet.ApplicationService/BecaDotNet.ApplicationService.csproj
+++ b/BecaDotNet.ApplicationService/BecaDotNet.ApplicationService.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAppService.cs" />
+    <Compile Include="UserAppSvcGeneric.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BecaDotNet.CrossCutting\BecaDotNet.CrossCutting.csproj">
