--- a/BecaDotNet.ApplicationServiceTests/App.config
+++ b/BecaDotNet.ApplicationServiceTests/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" providerName="System.Data.SqlClient"/>
+    <!--<add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=beca_net_db;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
