--- a/BecaDotNet.ApplicationService/BecaDotNet.ApplicationService.csproj
+++ b/BecaDotNet.ApplicationService/BecaDotNet.ApplicationService.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAppService.cs" />
     <Compile Include="UserAppSvcGeneric.cs" />
+    <Compile Include="UserTypeUserAppSvcGeneric.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BecaDotNet.CrossCutting\BecaDotNet.CrossCutting.csproj">
