--- a/BecaDotNet.Repository/BecaDotNet.Repository.csproj
+++ b/BecaDotNet.Repository/BecaDotNet.Repository.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
     <Compile Include="UserRepositoryGeneric.cs" />
+    <Compile Include="UserTypeUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BecaDotNet.Domain\BecaDotNet.Domain.csproj">
