--- a/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
+++ b/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
@@ -165,6 +165,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Filter\CustomAuthorizeAttribute.cs" />
+    <Compile Include="Models\UrlToActionHelper.cs" />
     <Compile Include="Models\ViewModel\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
