--- a/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
+++ b/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -168,6 +169,8 @@
     <Compile Include="Models\Filter\CustomAuthorizeAttribute.cs" />
     <Compile Include="Models\HelperForDropdown.cs" />
     <Compile Include="Models\UrlToActionHelper.cs" />
+    <Compile Include="Models\ViewModel\ClientViewModel.cs" />
+    <Compile Include="Models\ViewModel\ProjectViewModel.cs" />
     <Compile Include="Models\ViewModel\UserListViewModel.cs" />
     <Compile Include="Models\ViewModel\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -181,6 +184,9 @@
     <Content Include="Views\User\List.cshtml" />
     <Content Include="Views\User\UserControl.cshtml" />
     <Content Include="Views\User\UserListGrid.cshtml" />
+    <Content Include="Views\Client\List.cshtml" />
+    <Content Include="Views\Client\New.cshtml" />
+    <Content Include="Views\Client\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
