commit final pra ajudar os truta, siga la pelota

--- a/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
+++ b/BecaDotNet.UI.MVC.RazorView/BecaDotNet.UI.MVC.RazorView.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -188,6 +189,9 @@
     <Content Include="Views\Client\List.cshtml" />
     <Content Include="Views\Client\New.cshtml" />
     <Content Include="Views\Client\Edit.cshtml" />
+    <Content Include="Views\Project\List.cshtml" />
+    <Content Include="Views\Project\Create.cshtml" />
+    <Content Include="Views\Project\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
