--- a/BecaDotNet.Repository/BecaDotNet.Repository.csproj
+++ b/BecaDotNet.Repository/BecaDotNet.Repository.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>201808291754158_SetNullableOnProjectEndDate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ProjectRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
     <Compile Include="UserRepositoryGeneric.cs" />
