--- a/BecaDotNet.ApplicationServiceTests/App.config
+++ b/BecaDotNet.ApplicationServiceTests/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=beca_net_db;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=beca_net_db;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -14,4 +14,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
