--- a/BecaDotNet.Repository/App.config
+++ b/BecaDotNet.Repository/App.config
@@ -12,7 +12,15 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnString" connectionString="Server=SAO-5BXTB92;User Id=beca_net_db_usr;Password=becanet!!2018" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnString" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=beca_net_db;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
